--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@kyvg/vue3-notification": "^2.3.5",
     "pinia": "^2.0.16",
+    "vite-plugin-html-env": "^1.2.4",
     "vue": "^3.2.37",
     "vue3-table-lite": "^1.2.3"
   },
